--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "scope": "/",
   "icons": [
     {
-      "src": "icons/favicon.svg",
+      "src": "assets/icons/favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
